--- a/src/components/navigation/Nav.styles.scss
+++ b/src/components/navigation/Nav.styles.scss
@@ -12,6 +12,7 @@
     }
   
     .nav-links-container {
+      // border: 1px solid red;
       width: 50%;
       height: 100%;
       display: flex;
