--- a/src/components/signup-form/signup-form.styles.scss
+++ b/src/components/signup-form/signup-form.styles.scss
@@ -1,13 +1,19 @@
-.sign-up-container{
-    display: flex;
-    flex-direction: column;
-    width: 380px;
+.sign-up-container {
+  display: flex;
+  flex-direction: column;
+  width: 380px;
 
-    h2{
-       margin: 10px 0;
-    }
-    span{
-        // color: red;
-        font-size: 2rem;
-    }
+  h2 {
+    margin: 10px 0;
+  }
+  span {
+    // color: red;
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 576px) {
+  #root > div.auth-container > div:nth-child(2) > form > button {
+    margin: 0 auto;
+  }
 }
