added dropdown box

--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -1,9 +1,16 @@
 .categories-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 576px) {
+  .categories-container {
+    flex-direction: column;
   }
-  
-  
-  
+}
+@media (max-width: 768px) {
+  .categories-container {
+    flex-direction: column;
+  }
+}
