--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -6,22 +5,25 @@
 }
 body {
   font-family: 'Open Sans', serif;
-  padding: .5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
 }
 a {
   text-decoration: none;
   color: rgb(74, 74, 74);
 }
+html,
+body {
+  height: auto;
+  min-height: 100%;
+}
 
-@media(max-width: 492px){
-  body{
-  padding: .3rem 1rem;
-
+@media (max-width: 492px) {
+  body {
+    padding: 0.3rem 1rem;
   }
 }
-@media(max-width: 768px){
-  body{
-  padding: .3rem 1rem;
-
+@media (max-width: 768px) {
+  body {
+    padding: 0.3rem 1rem;
   }
 }
