--- a/src/routes/Shop/shop.styles.scss
+++ b/src/routes/Shop/shop.styles.scss
@@ -1,23 +1,15 @@
-.products-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  row-gap: 2rem;
-  column-gap: 1.5rem;
-}
+// .products-container {
+//   display: grid;
+//   grid-template-columns: repeat(4, 1fr);
+//   row-gap: 2rem;
+//   column-gap: 1.5rem;
+// }
+// .title {
+//   margin-bottom: 2rem;
+//   border: 1px solid red;
+//   background-color: green;
+// }
+// .error {
+//   text-align: center;
+// }
 
-@media (max-width: 992px) {
-  .products-container {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media (max-width: 768px) {
-  .products-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 576px) {
-  .products-container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
